--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,15 @@
 		<spring.cloud.version>4.1.3</spring.cloud.version>
 		<maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
 		<hibernate.version>6.6.0.Final</hibernate.version>
+		<avro.version>1.11.4</avro.version>
+		<kafka-clients.version>3.6.1</kafka-clients.version>
+		<grpc-spring-boot-starter.version>3.1.0.RELEASE</grpc-spring-boot-starter.version>
+		<grpc-client-spring-boot-starter>3.1.0.RELEASE</grpc-client-spring-boot-starter>
+		<protobuf.version>4.28.2</protobuf.version>
+		<grpc.version>1.63.0</grpc.version>
+		<avro-maven-plugin.version>1.11.4</avro-maven-plugin.version>
+		<protobuf-plugin.version>2.4.0</protobuf-plugin.version>
+		<jakarta.annotation-api.version>1.3.5</jakarta.annotation-api.version>
 	</properties>
 
 	<dependencies>
@@ -65,6 +74,47 @@
 				<version>${spring-cloud-dependencies.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.avro</groupId>
+				<artifactId>avro</artifactId>
+				<version>${avro.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.kafka</groupId>
+				<artifactId>kafka-clients</artifactId>
+				<version>${kafka-clients.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>net.devh</groupId>
+				<artifactId>grpc-spring-boot-starter</artifactId>
+				<version>${grpc-spring-boot-starter.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>net.devh</groupId>
+				<artifactId>grpc-server-spring-boot-starter</artifactId>
+				<version>${grpc-spring-boot-starter.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>net.devh</groupId>
+				<artifactId>grpc-client-spring-boot-starter</artifactId>
+				<version>${grpc-client-spring-boot-starter}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.grpc</groupId>
+				<artifactId>grpc-stub</artifactId>
+				<version>${grpc.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.grpc</groupId>
+				<artifactId>grpc-protobuf</artifactId>
+				<version>${grpc.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.google.protobuf</groupId>
+				<artifactId>protobuf-java</artifactId>
+				<version>${protobuf.version}</version>
+				<scope>compile</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
