--- a/stats/pom.xml
+++ b/stats/pom.xml
@@ -15,5 +15,8 @@
         <module>stats-client</module>
         <module>stats-dto</module>
         <module>stats-server</module>
+        <module>avro-schemas</module>
+        <module>proto-schemas</module>
+        <module>collector-server</module>
     </modules>
 </project>
