Add aggregator service for processing user actions via Kafka
Introduced a new `aggregator-server` module to handle user actions, calculate event similarities, and produce results to a Kafka topic. Added consumer and producer configurations, utility classes, and services for processing and aggregating data. This establishes the foundation for event-based user action handling in the stats service.

--- a/stats/pom.xml
+++ b/stats/pom.xml
@@ -18,5 +18,6 @@
         <module>avro-schemas</module>
         <module>proto-schemas</module>
         <module>collector-server</module>
+        <module>aggregator-server</module>
     </modules>
 </project>
