--- a/infra/config-server/src/main/resources/config/stats/collector-server/dev/application.yaml
+++ b/infra/config-server/src/main/resources/config/stats/collector-server/dev/application.yaml
@@ -12,4 +12,4 @@ collector:
         "batch.size": 1000
         "linger.ms": 2000
       topics:
-        user.actions: stats.user-actions.v1
+        "user.actions": stats.user-actions.v1
