Add analyzer service for event recommendations and similarity
Integrated a new `analyzer-server` module for event-based recommendations, user action processing, and event similarity calculations. This includes Kafka consumers, gRPC handlers, database schema updates, and mappers to support data ingestion, storage, and recommendation generation. Enhanced modularity in the stats architecture.

--- a/stats/pom.xml
+++ b/stats/pom.xml
@@ -19,5 +19,6 @@
         <module>proto-schemas</module>
         <module>collector-server</module>
         <module>aggregator-server</module>
+        <module>analyzer-server</module>
     </modules>
 </project>
